--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Random Number App</title>
 </head>
 <body>
-    <h1>Archange mikael</h1>
+    <h1>Archange mickael</h1>
 
 </body>
 </html>
